--- a/Final Project LaTeX/Final Report/references.bib
+++ b/Final Project LaTeX/Final Report/references.bib
@@ -6,6 +6,40 @@
   file = {/home/josh/Zotero/storage/EG8JS4KX/ten-usability-heuristics.html;/home/josh/Zotero/storage/NEJNFYQD/ten-usability-heuristics.html;/home/josh/Zotero/storage/NFGVPAXE/ten-usability-heuristics.html}
 }
 
+@online{AgileWaterfall2021,
+  title = {Agile versus {{Waterfall}}},
+  date = {2021},
+  url = {https://www.pmi.org/learning/library/agile-versus-waterfall-approach-erp-project-6300},
+  urldate = {2021-09-13},
+  abstract = {Traditional waterfall project methodologies have been used for years to implement complex and large-scale enterprise resource planning (ERP) projects. Often, ERP projects are over budget and late in schedule. Stakeholders are often disappointed in the delayed realization of benefits and the quality of the delivered product. In today's economy, it is a reality that we need to be able to deliver our projects with fixed constraints on resources. This paper discusses how Lean principles and agile techniques can be used to create a high-performing ERP team that will deliver high value and high quality products to your stakeholders in a shorter period of time. It discusses how to create cross-functional teams that are collaborative, adaptive, and responsive to customer needs. It will also show how to transform your ERP team to increase productivity so you can realize benefits sooner. In addition, this paper will introduce assessment areas and evaluation criteria on how to determine the appropriate approach for your},
+  langid = {english},
+  file = {/home/josh/Zotero/storage/VHIIYCHX/agile-versus-waterfall-approach-erp-project-6300.html}
+}
+
+@online{androidAndroidAppBundle2021,
+  title = {Android {{App Bundle}}},
+  author = {, Android},
+  date = {2021},
+  url = {https://developer.android.com/platform/technology/app-bundle},
+  urldate = {2021-09-14},
+  abstract = {{$<$}!-- hide description --{$>$}},
+  langid = {english},
+  organization = {{Android Developers}},
+  file = {/home/josh/Zotero/storage/NX7VB7SK/app-bundle.html}
+}
+
+@online{androidAndroidGradlePlugin2021,
+  title = {Android {{Gradle}} Plugin Release Notes},
+  author = {, Android},
+  date = {2021},
+  url = {https://developer.android.com/studio/releases/gradle-plugin},
+  urldate = {2021-09-14},
+  abstract = {The Android Studio build system is based on Gradle, and the Android Gradle plugin adds several features that are specific to building Android apps.},
+  langid = {english},
+  organization = {{Android Developers}},
+  file = {/home/josh/Zotero/storage/BNW6BG3C/gradle-plugin.html}
+}
+
 @online{AndroidVsIOS2021,
   title = {Android vs {{iOS}} Market Share 2023},
   date = {2021},
@@ -15,6 +49,15 @@
   langid = {english},
   organization = {{Statista}},
   file = {/home/josh/Zotero/storage/EWAYB74J/market-share-forecast-for-smartphone-operating-systems.html}
+}
+
+@online{appleBundleIDsApple2021,
+  title = {Bundle {{IDs}} | {{Apple Developer Documentation}}},
+  author = {, Apple},
+  date = {2021},
+  url = {https://developer.apple.com/account/ios/identifier/bundle},
+  urldate = {2021-09-14},
+  organization = {{Bundle IDs | Apple Developer Documentation}}
 }
 
 @incollection{arnowitzChapter15Wireframe2007,
@@ -130,6 +173,17 @@
   file = {/home/josh/Zotero/storage/JGQL2AVT/the-future-of-work-after-covid-19.html}
 }
 
+@online{GeoflutterfireFlutterPackage2021,
+  title = {Geoflutterfire | {{Flutter Package}}},
+  date = {2021},
+  url = {https://pub.dev/packages/geoflutterfire},
+  urldate = {2021-09-03},
+  abstract = {GeoFlutterFire is an open-source library that allows you to store and query firestore documents based on their geographic location.},
+  langid = {american},
+  organization = {{Dart packages}},
+  file = {/home/josh/Zotero/storage/WME49VKK/geoflutterfire.html}
+}
+
 @book{humbleContinuousDeliveryReliable2010,
   title = {Continuous {{Delivery}}: {{Reliable Software Releases}} through {{Build}}, {{Test}}, and {{Deployment Automation}}},
   shorttitle = {Continuous {{Delivery}}},
@@ -227,6 +281,19 @@
   file = {/home/josh/Zotero/storage/FNTVSNVL/autocomplete.html}
 }
 
+@book{poppendieckLeanSoftwareDevelopment2003,
+  title = {Lean {{Software Development}}: {{An Agile Toolkit}}},
+  shorttitle = {Lean {{Software Development}}},
+  author = {Poppendieck, Mary and Poppendieck, Tom},
+  date = {2003-05-08},
+  publisher = {{Addison-Wesley Professional}},
+  location = {{Boston}},
+  abstract = {Lean Software Development: An Agile Toolkit  Adapting agile practices to your development organization Uncovering and eradicating waste throughout the software development lifecycle Practical techniques for every development manager, project manager, and technical leader  Lean software development: applying agile principles to your organization In Lean Software Development, Mary and Tom Poppendieck identify seven fundamental "lean" principles, adapt them for the world of software development, and show how they can serve as the foundation for agile development approaches that work. Along the way, they introduce 22 "thinking tools" that can help you customize the right agile practices for any environment.  Better, cheaper, faster software development. You can have all three–if you adopt the same lean principles that have already revolutionized manufacturing, logistics and product development.   Iterating towards excellence: software development as an exercise in discovery Managing uncertainty: "decide as late as possible" by building change into the system. Compressing the value stream: rapid development, feedback, and improvement Empowering teams and individuals without compromising coordination Software with integrity: promoting coherence, usability, fitness, maintainability, and adaptability  How to "see the whole"–even when your developers are scattered across multiple locations and contractors  Simply put, Lean Software Development helps you refocus development on value, flow, and people–so you can achieve breakthrough quality, savings, speed, and business alignment.},
+  isbn = {978-0-321-15078-3},
+  langid = {english},
+  pagetotal = {240}
+}
+
 @online{ray28StatisticsHome2021,
   title = {28 {{Statistics Home Services Marketers Need}} to {{Know}} in 2021},
   author = {Ray, Owen},
@@ -269,6 +336,13 @@
   file = {/home/josh/Zotero/storage/D699Q29M/product-development-process.html}
 }
 
+@online{SignApple,
+  title = {Sign {{In}} - {{Apple}}},
+  url = {https://idmsa.apple.com/IDMSWebAuth/signin?appIdKey=891bd3417a7776362562d2197f89480a8547b108fd934911bcbea0110d07f757&path=%2Faccount%2Fresources%2F&rv=1},
+  urldate = {2021-09-14},
+  file = {/home/josh/Zotero/storage/79Q2EUDI/signin.html}
+}
+
 @online{SketchVsFigma0200,
   title = {Sketch vs {{Figma}}, {{Adobe XD}}, {{And Other UI Design Applications}}},
   year = {11:00:16 +0200 +0200},
@@ -278,6 +352,14 @@
   langid = {english},
   organization = {{Smashing Magazine}},
   file = {/home/josh/Zotero/storage/IQVAN9YW/sketch-figma-adobe-xd-ui-design-applications.html}
+}
+
+@online{StateAgileReport2021,
+  title = {State of {{Agile Report}} | {{State}} of {{Agile}}},
+  date = {2021},
+  url = {https://stateofagile.com/#ufh-i-661275008-15th-state-of-agile-report/7027494},
+  urldate = {2021-09-13},
+  file = {/home/josh/Zotero/storage/9U8GBIX4/stateofagile.com.html}
 }
 
 @online{StateOctoverse2019,
