--- a/Final Project LaTeX/Final Report/references.bib
+++ b/Final Project LaTeX/Final Report/references.bib
@@ -96,6 +96,19 @@
   file = {/home/josh/Zotero/storage/5RXSUK8G/firestore.html}
 }
 
+@online{cosmeticsdesign-europe.comTrendReflectionsWays,
+  title = {Trend Reflections: 9 Ways {{COVID}}-19 Changed Beauty Consumption in 2020},
+  shorttitle = {Trend Reflections},
+  author = {cosmeticsdesign- {europe.com}},
+  options = {useprefix=true},
+  url = {https://www.cosmeticsdesign-europe.com/Article/2020/12/22/Beauty-trends-during-COVID-19-changed-including-hygiene-safety-and-digital-focus-says-CosmeticsDesign-Europe},
+  urldate = {2021-09-15},
+  abstract = {The ongoing coronavirus (COVID-19) pandemic has mightily impacted consumer behaviour, with many upcoming beauty trends fast-forwarded and new purchase and usage patterns appearing. Here, CosmeticsDesign-Europe brings you the nine ways beauty consumption changed this year.},
+  langid = {british},
+  organization = {{cosmeticsdesign-europe.com}},
+  file = {/home/josh/Zotero/storage/DMQC66BQ/Beauty-trends-during-COVID-19-changed-including-hygiene-safety-and-digital-focus-says-Cosmetics.html}
+}
+
 @online{DesktopVsMobile2021,
   title = {Desktop vs {{Mobile}} vs {{Tablet Market Share Worldwide}}},
   date = {2021},
@@ -209,6 +222,18 @@
   file = {/home/josh/Zotero/storage/PWSKHPIX/www.getshortcut.co.html}
 }
 
+@online{kierominIntroductionChangeManagement2020,
+  title = {Introduction to {{Change Management}}},
+  author = {Kieromin, Berry},
+  date = {2020-03-25T10:17:39+00:00},
+  url = {http://worksmartertogether.ucd.ie/introduction-to-change-management/},
+  urldate = {2021-09-15},
+  abstract = {By Michael Sinnott, UCD Agile At a higher education conference last summer I came across a change management framework developed by a group called Prosci (https://www.prosci.com/).~ Prosci stood out because so many of the...},
+  langid = {british},
+  organization = {{Work Smarter Together}},
+  file = {/home/josh/Zotero/storage/52LIB33Q/introduction-to-change-management.html}
+}
+
 @online{larsonUseCasesWhat2004,
   title = {Use {{Cases}} - What {{Every Project Manager Should Know}}},
   author = {Larson, Richard and Larson, Elizabeth},
@@ -244,6 +269,27 @@
   abstract = {Much has been written on creating personas --- both what they are good for, and how to create them. A common problem with personas is that they are not based on real customer data, and if they are, the data set is not of a sample size that can be considered statistically significant. In this paper, we describe a new method for creating and validating personas, based on the statistical analysis of data, which is fast and cost effective.},
   isbn = {978-1-60558-011-1},
   keywords = {data analysis,data gathering,factor analysis,interview,persona development,personas,survey,user research}
+}
+
+@online{mckinseyCOVID19DigitalTransformation2020,
+  title = {{{COVID}}-19 Digital Transformation \& Technology | {{McKinsey}}},
+  author = {, Mckinsey},
+  date = {2020},
+  url = {https://www.mckinsey.com/business-functions/strategy-and-corporate-finance/our-insights/how-covid-19-has-pushed-companies-over-the-technology-tipping-point-and-transformed-business-forever},
+  urldate = {2021-09-15},
+  file = {/home/josh/Zotero/storage/C8JH9CXM/how-covid-19-has-pushed-companies-over-the-technology-tipping-point-and-transformed-business-fo.html}
+}
+
+@online{mckinseyEvolvingConsumerHow2020,
+  title = {The Evolving Consumer: {{How COVID}}-19 Is Changing the Way We Shop | {{McKinsey}} \& {{Company}}},
+  shorttitle = {The Evolving Consumer},
+  author = {, Mckinsey},
+  date = {2020},
+  url = {https://www.mckinsey.com/about-us/covid-response-center/mckinsey-live/webinars/evolving-consumer-how-covid-19-has-changed-us-shopping-habits},
+  urldate = {2021-09-15},
+  abstract = {Consumer shopping and spending habits look different today. Which changes will persist? What trends should retailers bear in mind heading into the holidays?},
+  langid = {english},
+  file = {/home/josh/Zotero/storage/4IXSDGKS/evolving-consumer-how-covid-19-has-changed-us-shopping-habits.html}
 }
 
 @online{MobilePercentageWebsite2021,
@@ -407,4 +453,5 @@
   file = {/home/josh/Zotero/storage/5Y4UFXRV/will-ride-hailing-profits-ever-come.html}
 }
 
+@preamble{ "\ifdefined\DeclarePrefChars\DeclarePrefChars{'’-}\else\fi " }
 
